--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fe:dev": "npm run dev --workspace=@sff/frontend",
     "cdk:deploy": "npm run cdk:deploy --workspace=@sff/infrastructure",
     "cdk:synth": "npm run cdk:synth --workspace=@sff/infrastructure",
-    "utils-lambda-layer:build": "npm run build --workspace=@sff/utils-lambda-layer"
+    "utils-lambda-layer:build": "npm run build --workspace=@sff/utils-lambda-layer",
+    "utils-lambda-layer:watch": "npm run watch --workspace=@sff/utils-lambda-layer"
   }
 }
