adeded s3 bucket and cloudfront distrubution

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -2,7 +2,7 @@
   "name": "@sff/infrastructure",
   "version": "0.1.0",
   "bin": {
-    "temp_cdk_stack": "bin/temp_cdk_stack.js"
+    "website_cdk_stack": "bin/website_cdk_stack.js"
   },
   "scripts": {
     "build": "tsc",
