--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "fe:dev": "npm run dev --workspace=@sff/frontend",
+    "fe:build": "npm run build --workspace=@sff/frontend",
     "cdk:deploy": "npm run cdk:deploy --workspace=@sff/infrastructure",
     "cdk:synth": "npm run cdk:synth --workspace=@sff/infrastructure",
     "utils-lambda-layer:build": "npm run build --workspace=@sff/utils-lambda-layer",
