--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "cdk": "cdk",
     "cdk:deploy": "cdk deploy --require-approval never",
+    "cdk:destroy": "cdk destroy --require-approval never",
     "cdk:synth": "cdk synth"
   },
   "devDependencies": {
