--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "fe:dev": "npm run dev --workspace=@sff/frontend",
     "fe:build": "npm run build --workspace=@sff/frontend",
     "cdk:deploy": "npm run cdk:deploy --workspace=@sff/infrastructure",
+    "cdk:destroy": "npm run cdk:destroy --workspace=@sff/infrastructure",
     "cdk:synth": "npm run cdk:synth --workspace=@sff/infrastructure",
-    "utils-lambda-layer:build": "npm run build --workspace=@sff/utils-lambda-layer",
-    "utils-lambda-layer:watch": "npm run watch --workspace=@sff/utils-lambda-layer"
+    "lambda-layer:build": "npm run build --workspace=@sff/utils-lambda-layer",
+    "labmda-layer:watch": "npm run watch --workspace=@sff/utils-lambda-layer"
   }
 }
