--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
     "aws-amplify": "^6.15.3",
     "next": "15.3.3",
     "react": "^19.0.0",
