--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,7 +13,8 @@
     "aws-amplify": "^6.15.3",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
